--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>mysql</artifactId>
-      <version>1.12.5</version>
+      <version>1.15.0-rc2</version>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
